# ticker-reader-webclient

./: .gitmodules  CMakeLists.txt  README.txt
src/: main.cpp
